--- a/templates/index.html
+++ b/templates/index.html
@@ -7,23 +7,11 @@
 <body>
     <div id="game-container">
         <div id="game-output"></div>
-        
-        <div id="player-info">
-            <div id="stats"></div>
-            <div id="inventory"></div>
-        </div>
-        
         <div id="input-area">
-            <input type="text" id="command-input" placeholder="Enter your action...">
+            <input type="text" id="command-input" placeholder="Enter your command...">
             <button onclick="sendCommand()">Submit</button>
         </div>
-        
-        <div id="reference-area">
-            <h3>Common Commands</h3>
-            <div id="command-list"></div>
-        </div>
     </div>
-    
     <script src="{{ url_for('static', filename='js/game.js') }}"></script>
 </body>
 </html>
